--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/twitch-icon.svg" />
+    <meta name="description" content="Check if a Twitch username is available or already taken. Fast and free — powered by the official Twitch API." />
+    <meta name="keywords" content="twitch username checker, twitch username availability, check twitch username, twitch name checker" />
+    <link rel="canonical" href="https://mauduong.github.io/twitch-username-checker/" />
+    <meta property="og:title" content="Twitch Username Checker" />
+    <meta property="og:description" content="Check if a Twitch username is available or already taken." />
+    <meta property="og:url" content="https://mauduong.github.io/twitch-username-checker/" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Twitch Username Checker" />
+    <meta name="twitter:description" content="Check if a Twitch username is available or already taken." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>twitch-username-checker</title>
   </head>
