better title readability on browser tabs

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="twitter:title" content="Twitch Username Checker" />
     <meta name="twitter:description" content="Check if a Twitch username is available or already taken." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>twitch-username-checker</title>
+    <title>Twitch Username Checker</title>
   </head>
   <body>
     <div id="root"></div>
